--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
 
-        <div id="start">Shivangi click me!</div>
+        <div id="start">click me Shivang!</div>
         <div id="quiz" style="display: none">
             <div id="question"></div>
             <div id="qImg"></div>
